<resources>
    <string name="app_name">CONSTRAINT LAYOUT</string>
    <string name="var1">Ini Pesan</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bSignIn">Sign In</string>
    <string name="tData">Data Anda</string>
    <string name="tlogin">LOGIN</string>
    <string name="txemail">Hasil Email</string>
    <string name="txpassword">Hasil Password</string>
    <string name="label2">login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="llihatdata">Lihat Data</string>
    <string name="leditdata">Edit Data</string>
    <string name="ldatakontak">Data Kontak</string>
    <string name="lnamaitem">Nama Item</string>
    <string name="ldetailkontak">Detail Kontak</string>
    <string name="lnama">Nama</string>
    <string name="lnotel">Nomor Telepon</string>
</resources>